num tem nada xoxo nesse filme, rogerinho

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: João Brunet
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
+description: 'Professor - Computação @ UFCG'
 url: 'http://joaoartrhubm.github.io'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
