--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
 title: João Brunet
 description: 'Professor - Computação @ UFCG'
-url: 'http://joaoartrhubm.github.io'
+url: 'http://joaoarthurbm.github.io'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
+  name: 'João Brunet'
+  email: joao.arthur@computacao.ufcg.edu.br
   twitter_username: joaobrunet
   facebook_username: joaoarthurbm
   github_username:  joaoarthurbm
