--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: João Brunet
 description: 'Professor - Computação @ UFCG'
-url: 'http://joaoarthurbm.github.io'
+url: 'http://joaoarthurbm.github.io/'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
