--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Researcher
-url: "http://ankitsultana.com"
-baseurl: "/researcher"
+url: "http://joaoarthurbm.github.io"
+baseurl: "/"
 
 markdown: kramdown
 
