--- a/researcher/_config.yml
+++ b/researcher/_config.yml
@@ -1,5 +1,5 @@
 title: Researcher
-url: "http://joaoarthurbm.github.io"
+url: "http://joaoarthurbm.github.io/"
 baseurl: "researcher/"
 
 markdown: kramdown
