--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Professor - Computação @ UFCG
-url: "http://joaoarthurbm.github.io"
+url: "https://joaoarthurbm.github.io"
 baseurl: "/"
 
 markdown: kramdown
