--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Assistant Professor - Computação @ UFCG
+title: Professor - Computação @ UFCG
 url: "https://joaoarthurbm.github.io"
 baseurl: "/"
 
